--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,7 +15,7 @@
 						</li>
 						<li class="nav-item"><a class="nav-link" th:href="@{#none}">초보자 가이드</a>
 						</li>
-						<li class="nav-item"><a class="nav-link" th:href="@{#none}">연도별 대표마</a>
+						<li class="nav-item"><a class="nav-link" th:href="@{/yundo/view}">연도별 대표마</a>
 						</li>
 						<li class="nav-item"><a class="nav-link" th:href="@{#none}">순위 예측</a>
 						</li>
