--- a/src/main/resources/templates/horseDetail.html
+++ b/src/main/resources/templates/horseDetail.html
@@ -31,7 +31,7 @@
 				<th>산지</th>
 				<td>[[${horse.nation}]]</td>
 				<th>조교사</th>
-				<td th:onclick='trainerDetail([[${trainer.trNo}]], [[${trainer.meet}]])'>[[${trainer.trName}]]</td>
+				<td >kljlk</td>
 			</tr>
 			<tr>
 				<th>통산전적</th>
@@ -55,7 +55,7 @@
 	    });
 	});
 	
-	function trainerDetail(trNo, meet){
+	/* function trainerDetail(trNo, meet){
 		if(trNo != "0AAAAA" && trNo != "0BBBBB" && trNo != "프리기수" ){
 			let form = document.createElement("form");
 			form.setAttribute("method", "POST");
@@ -81,7 +81,7 @@
 			form.appendChild(hiddenField2);
 			document.body.appendChild(form);
 			form.submit();
-		}
+		} */
 	}
 	</script>
 </body>
