--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
 		<div class="carousel-inner" role="listbox">
 			<!-- Slide One - Set the background image for this slide in the line below -->
 			<div class="carousel-item active"
-					style="background-image: url('http://placehold.it/1900x1080')">
+					style="background-image: url('https://i.pinimg.com/originals/7e/0c/06/7e0c06f26f8346c8dbfe3516d34ac554.gif')">
 				<div class="carousel-caption d-none d-md-block">
 											<h3>First Slide</h3>
 					<p>This is a description for the first slide.</p>
@@ -29,7 +29,7 @@
 			</div>
 			<!-- Slide Two - Set the background image for this slide in the line below -->
 			<div class="carousel-item"
-					style="background-image: url('http://placehold.it/1900x1080')">
+					style="background-image: url('https://file3.instiz.net/data/file3/2018/03/14/c/c/5/cc5c6d0eb06f177a891aeff935bc7c02.gif')">
 				<div class="carousel-caption d-none d-md-block">
 					<h3>Second Slide</h3>
 					<p>This is a description for the second slide.</p>
@@ -37,7 +37,7 @@
 			</div>
 				<!-- Slide Three - Set the background image for this slide in the line below -->
 			<div class="carousel-item"
-					style="background-image: url('http://placehold.it/1900x1080')">
+					style="background-image: url('https://t1.daumcdn.net/cfile/blog/995594335AC2861027')">
 				<div class="carousel-caption d-none d-md-block">
 					<h3>Third Slide</h3>
 					<p>This is a description for the third slide.</p>
