--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -11,11 +11,12 @@
 	<script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 	<title>마진</title>
 	
+	<!-- favicon.ico 방지 -->
+	<link rel="shortcut icon" href="#">
+	
 	<!-- Bootstrap core CSS -->
 	<link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/static/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
-<!-- 	<link href="/static/vendor/bootstrap/css/bootstrap-grid.css" rel="stylesheet">
-	<link href="/static/vendor/bootstrap/css/bootstrap-grid.min.css" rel="stylesheet"> -->
 	
 	<!-- Custom styles for this template -->
 	<link href="/static/css/modern-business.css" rel="stylesheet">
