--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -251,6 +251,8 @@
 			   </th:block>
 			   </div>
 			 </th:block>
+			 
+			 <!-- 프로필 -->
 			 <th:block th:unless="${#lists.isEmpty(horseDetail)}">
 				<h1 class="my-4">경주마 프로필</h1>
 				<table border=1>
@@ -344,6 +346,135 @@
 						<td>[[${jockeyDetail.jConsecutiveWinningP}]]</td>
 					</tr>
 				</table>
+			</th:block>
+			
+			<!-- 명예의 전당 -->
+			<th:block th:unless="${#lists.isEmpty(seoul)}">
+				<h1 class="my-4">서울 명예의 전당</h1>
+				<div class="row justify-content-md-center">
+					<div class="col-sm-top">해당연도</div>
+					<div class="col-sm-top">연도 대표마</div>
+					<div class="col-sm-top">최우수 국내산마</div>
+					<div class="col-sm-top">최우수 국내산 3세마</div>
+					<div class="col-sm-top">최우수 조교사</div>
+					<div class="col-sm-top">최우수 기수</div>
+					<div class="col-sm-top">페어플레이 기수</div>
+					<div class="col-sm-top">최우수 신인기수</div>
+					<div class="col-sm-top">최우수 관리조</div>
+				</div>
+				<th:block th:each="yundo : ${seoul}">
+					<!-- Marketing Icons Section -->
+					<div class="row justify-content-md-center">
+						<div class="col-sm" th:text="${yundo.yundoJpaKey.getYear()}"></div>
+						<div class="col-sm"
+							th:onclick="horseDetail([[${seoulSeq[yundoStat.index][0]}]], [[\'1\']], 0 ,0)"
+							th:text=${seoulName[yundoStat.index][0]}></div>
+						<div class="col-sm"
+							th:onclick="horseDetail([[${seoulSeq[yundoStat.index][1]}]], [[\'1\']], 0 ,0)"
+							th:text=${seoulName[yundoStat.index][1]}></div>
+						<div class="col-sm"
+							th:onclick="horseDetail([[${seoulSeq[yundoStat.index][2]}]], [[\'1\']], 0 ,0)"
+							th:text=${seoulName[yundoStat.index][2]}></div>
+						<div class="col-sm"
+							th:onclick="trainerDetail([[${seoulSeq[yundoStat.index][3]}]], [[\'1\']], 0 ,0)"
+							th:text=${seoulName[yundoStat.index][3]}></div>
+						<div class="col-sm"
+							th:onclick="jockeyDetail([[${seoulSeq[yundoStat.index][4]}]], [[\'1\']], 0 ,0)"
+							th:text=${seoulName[yundoStat.index][4]}></div>
+						<div class="col-sm"
+							th:onclick="jockeyDetail([[${seoulSeq[yundoStat.index][5]}]], [[\'1\']], 0 ,0)"
+							th:text=${seoulName[yundoStat.index][5]}></div>
+						<div class="col-sm"
+							th:onclick="jockeyDetail([[${seoulSeq[yundoStat.index][6]}]], [[\'1\']], 0 ,0)"
+							th:text=${seoulName[yundoStat.index][6]}></div>
+						<div class="col-sm" th:text="${yundo.jo}"></div>
+					</div>
+				</th:block>
+			</th:block>
+		
+
+			<th:block th:unless="${#lists.isEmpty(jeju)}">
+				<h1 class="my-4">제주 명예의 전당</h1>
+				<div class="row justify-content-md-center">
+					<div class="col-sm-top">해당연도</div>
+					<div class="col-sm-top">최우수 제주마</div>
+					<div class="col-sm-top">최우수 한라마</div>
+					<div class="col-sm-top">최우수 마주</div>
+					<div class="col-sm-top">최우수 조교사</div>
+					<div class="col-sm-top">최우수 기수</div>
+					<div class="col-sm-top">인기 기수</div>
+					<div class="col-sm-top">페어플레이 기수</div>
+					<div class="col-sm-top">최우수 관리조</div>
+				</div>
+				<th:block th:each="yundo : ${jeju}">
+					<!-- Marketing Icons Section -->
+					<div class="row justify-content-md-center">
+						<div class="col-sm" th:text="${yundo.yundoJpaKey.getYear()}"></div>
+						<div class="col-sm"
+							th:onclick="horseDetail([[${jejuSeq[yundoStat.index][0]}]], [[\'2\']], 0 ,0)"
+							th:text=${jejuName[yundoStat.index][0]}></div>
+						<div class="col-sm"
+							th:onclick="horseDetail([[${jejuSeq[yundoStat.index][0]}]], [[\'2\']], 0 ,0)"
+							th:text=${jejuName[yundoStat.index][0]}></div>
+						<div class="col-sm" th:text=${jejuName[yundoStat.index][2]}></div>
+						<div class="col-sm"
+							th:onclick="trainerDetail([[${jejuSeq[yundoStat.index][3]}]],, [[\'2\']], 0 ,0)"
+							th:text=${jejuName[yundoStat.index][3]}></div>
+						<div class="col-sm"
+							th:onclick="jockeyDetail([[${jejuSeq[yundoStat.index][4]}]], [[\'2\']], 0 ,0)"
+							th:text=${jejuName[yundoStat.index][4]}></div>
+						<div class="col-sm"
+							th:onclick="jockeyDetail([[${jejuSeq[yundoStat.index][5]}]], [[\'2\']], 0 ,0)"
+							th:text=${jejuName[yundoStat.index][5]}></div>
+						<div class="col-sm"
+							th:onclick="jockeyDetail([[${jejuSeq[yundoStat.index][6]}]], [[\'2\']], 0 ,0)"
+							th:text=${jejuName[yundoStat.index][6]}></div>
+						<div class="col-sm" th:text="${yundo.jo}"></div>
+					</div>
+				</th:block>
+			</th:block>
+		
+			<th:block th:unless="${#lists.isEmpty(busan)}">
+				<h1 class="my-4">부산경남 명예의 전당</h1>
+				<div class="row justify-content-md-center">
+					<div class="col-sm-top">해당연도</div>
+					<div class="col-sm-top">연도 대표마</div>
+					<div class="col-sm-top">최우수 국내산마</div>
+					<div class="col-sm-top">최우수 국내산 3세마</div>
+					<div class="col-sm-top">최우수 조교사</div>
+					<div class="col-sm-top">최우수 기수</div>
+					<div class="col-sm-top">페어플레이 기수</div>
+					<div class="col-sm-top">최우수 신인기수</div>
+					<div class="col-sm-top">최우수 관리조</div>
+				</div>
+				<th:block th:each="yundo : ${busan}">
+					<!-- Marketing Icons Section -->
+					<div class="row justify-content-md-center">
+						<div class="col-sm" th:text="${yundo.yundoJpaKey.getYear()}"></div>
+						<div class="col-sm"
+							th:onclick="horseDetail([[${busanSeq[yundoStat.index][0]}]], [[\'3\']], 0 ,0)"
+							th:text=${busanName[yundoStat.index][0]}></div>
+						<div class="col-sm"
+							th:onclick="horseDetail([[${busanSeq[yundoStat.index][1]}]], [[\'3\']], 0 ,0)"
+							th:text=${busanName[yundoStat.index][1]}></div>
+						<div class="col-sm"
+							th:onclick="horseDetail([[${busanSeq[yundoStat.index][2]}]], [[\'3\']], 0 ,0)"
+							th:text=${busanName[yundoStat.index][2]}></div>
+						<div class="col-sm"
+							th:onclick="trainerDetail([[${busanSeq[yundoStat.index][3]}]], [[\'3\']], 0 ,0)"
+							th:text=${busanName[yundoStat.index][3]}></div>
+						<div class="col-sm"
+							th:onclick="jockeyDetail([[${busanSeq[yundoStat.index][4]}]], [[\'3\']], 0 ,0)"
+							th:text=${busanName[yundoStat.index][4]}></div>
+						<div class="col-sm"
+							th:onclick="jockeyDetail([[${busanSeq[yundoStat.index][5]}]], [[\'3\']], 0 ,0)"
+							th:text=${busanName[yundoStat.index][5]}></div>
+						<div class="col-sm"
+							th:onclick="jockeyDetail([[${busanSeq[yundoStat.index][6]}]], [[\'3\']], 0 ,0)"
+							th:text=${busanName[yundoStat.index][6]}></div>
+						<div class="col-sm" th:text="${yundo.jo}"></div>
+					</div>
+				</th:block>
 			</th:block>
 		</div>
 	</div>
@@ -522,6 +653,26 @@
 						 null, null);
 			}
 			
+			function yundo() {
+
+				$.ajax({
+					url : "/yundo/view",
+					type : "POST",
+					dataType : "text",
+					success : function(retVal) {
+						$("#information").val("");
+						$("#information").replaceWith(retVal);
+					},
+					error : function() {
+						alert("error");
+					}
+				});
+				
+				history.pushState(
+						{url : "/yundo/view"},
+						 null, null);
+			}
+
 			function hfirst(pageNo, search){
 				horseSearchPaging(pageNo, search);
 			}
@@ -660,10 +811,10 @@
 			$(window).on('popstate', function(event) {
 		    	  let data = event.originalEvent.state;
 		    	  console.log(data);
-		    	  /* if(data == null){
-		    		  location.href="/"
-		    	  } */
-		    	  if(data.url !== "/search"){
+		    	  
+				if (data == null){
+					location.href="/";
+				}else if(data.url !== "/search"){
 			    	  $.ajax({
 							url : data.url,
 							type : "POST",
@@ -680,6 +831,8 @@
 								alert("error");
 							}
 						});
+		    	  } else if (data.url === "/yundo/view"){
+		   				yundo();
 		    	  } else {
 		    		  $.ajax({
 							url : "/search",
@@ -698,8 +851,8 @@
 							error : function() {
 								alert("error");
 							}
-						});
-		    	  }
+					});
+		    	 }
 		    }); 
 				 
 		</script>
