--- a/src/main/resources/templates/yundo.html
+++ b/src/main/resources/templates/yundo.html
@@ -26,13 +26,13 @@
 				<div class="row justify-content-md-center">
 					<div class="col-sm" th:text="${yundo.yundoJpaKey.getYear()}"></div>
 					<div class="col-sm"
-						th:onclick="horseDetail([[${seoulSeq[yundoStat.index][0]}]], [[\'1\']])"
+						th:onclick="horseDetail([[${seoulSeq[yundoStat.index][0]}]], [[${seoulMeet[yundoStat.index][0]}]])"
 						th:text=${seoulName[yundoStat.index][0]}></div>
 					<div class="col-sm"
-						th:onclick="horseDetail([[${seoulSeq[yundoStat.index][1]}]], [[\'1\']])"
+						th:onclick="horseDetail([[${seoulSeq[yundoStat.index][1]}]], [[${seoulMeet[yundoStat.index][1]}]])"
 						th:text=${seoulName[yundoStat.index][1]}></div>
 					<div class="col-sm"
-						th:onclick="horseDetail([[${seoulSeq[yundoStat.index][2]}]], [[\'1\']])"
+						th:onclick="horseDetail([[${seoulSeq[yundoStat.index][2]}]], [[${seoulMeet[yundoStat.index][2]}]])"
 						th:text=${seoulName[yundoStat.index][2]}></div>
 					<div class="col-sm"
 						th:onclick="trainerDetail([[${seoulSeq[yundoStat.index][3]}]])"
@@ -69,10 +69,10 @@
 				<div class="row justify-content-md-center">
 					<div class="col-sm" th:text="${yundo.yundoJpaKey.getYear()}"></div>
 					<div class="col-sm"
-						th:onclick="horseDetail([[${jejuSeq[yundoStat.index][0]}]], [[\'2\']])"
+						th:onclick="horseDetail([[${jejuSeq[yundoStat.index][0]}]], [[${jejuMeet[yundoStat.index][0]}]])"
 						th:text=${jejuName[yundoStat.index][0]}></div>
 					<div class="col-sm"
-						th:onclick="horseDetail([[${jejuSeq[yundoStat.index][0]}]], [[\'2\']])"
+						th:onclick="horseDetail([[${jejuSeq[yundoStat.index][0]}]], [[${jejuMeet[yundoStat.index][1]}]])"
 						th:text=${jejuName[yundoStat.index][0]}></div>
 					<div class="col-sm" th:text=${jejuName[yundoStat.index][2]}></div>
 					<div class="col-sm"
@@ -109,13 +109,13 @@
 				<div class="row justify-content-md-center">
 					<div class="col-sm" th:text="${yundo.yundoJpaKey.getYear()}"></div>
 					<div class="col-sm"
-						th:onclick="horseDetail([[${busanSeq[yundoStat.index][0]}]], [[\'3\']])"
+						th:onclick="horseDetail([[${busanSeq[yundoStat.index][0]}]], [[${busanMeet[yundoStat.index][0]}]])"
 						th:text=${busanName[yundoStat.index][0]}></div>
 					<div class="col-sm"
-						th:onclick="horseDetail([[${busanSeq[yundoStat.index][1]}]], [[\'3\']])"
+						th:onclick="horseDetail([[${busanSeq[yundoStat.index][1]}]], [[${busanMeet[yundoStat.index][1]}]])"
 						th:text=${busanName[yundoStat.index][1]}></div>
 					<div class="col-sm"
-						th:onclick="horseDetail([[${busanSeq[yundoStat.index][2]}]], [[\'3\']])"
+						th:onclick="horseDetail([[${busanSeq[yundoStat.index][2]}]], [[${busanMeet[yundoStat.index][2]}]])"
 						th:text=${busanName[yundoStat.index][2]}></div>
 					<div class="col-sm"
 						th:onclick="trainerDetail([[${busanSeq[yundoStat.index][3]}]])"
