--- a/src/main/resources/templates/admin/guideInsert.html
+++ b/src/main/resources/templates/admin/guideInsert.html
@@ -75,23 +75,25 @@
 				bUseToolbar : true, // 툴바 사용 여부 (true:사용/ false:사용하지 않음)
 				bUseVerticalResizer : false, // 입력창 크기 조절바 사용 여부 (true:사용/ false:사용하지 않음)
 				bUseModeChanger : true, // 모드 탭(Editor | HTML | TEXT) 사용 여부 (true:사용/ false:사용하지 않음)
-				//bSkipXssFilter : true,		// client-side xss filter 무시 여부 (true:사용하지 않음 / 그외:사용)
-				//aAdditionalFontList : aAdditionalFontSet,		// 추가 글꼴 목록
 				fOnBeforeUnload : function() {
-					//alert("완료!");
 				}
-			}, //boolean
+			}, 
 			fOnAppLoad : function() {
 				//예제 코드
 				//oEditors.getById["ir1"].exec("PASTE_HTML", ["로딩이 완료된 후에 본문에 삽입되는 text입니다."]);
 			},
 			fCreator : "createSEditor2"
 		});
-
-		function pasteHTML(filepath){
-	        var sHTML = '<img src="<%=ctx%>/se2/upload/'+filepath+'">';
+		
+		 function pasteHTML(filepath) {
+            var sHTML = '';
+            oEditors.getById["content"].exec("PASTE_HTML", [sHTML]);
+        } 
+		
+		/* function pasteHTML(filepath){
+	        var sHTML = '<img src="<%=ctx%>/webapp/resources/photoUpload/'+filepath+'">';
 	        editor_object.getById["smarteditor"].exec("PASTE_HTML", [sHTML]);
-	    }
+	    }  */
 
 		function showHTML() {
 			var sHTML = oEditors.getById["content"].getIR();
