페이징 완료 수정 필수!!!!

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,17 +19,17 @@
 				</ol>
 				<div class="carousel-inner" role="listbox">
 					<!-- Slide One - Set the background image for this slide in the line below -->
-					<div class="carousel-item active" style="background-image: url('http://placehold.it/1900x1080')">
+					<div class="carousel-item active" style="background-image: url('static/fileupload/2020120713072060724d18-f060-4548-8cba-6391036e2171.gif')">
 						<div class="carousel-caption d-none d-md-block">
-													<h3>First Slide</h3>
-							<p>This is a description for the first slide.</p>
+													<h3>초보자 사용가이드</h3>
+							<p>초보자를 위한 경마 가이드</p>
 						</div>
 					</div>
 					<!-- Slide Two - Set the background image for this slide in the line below -->
-					<div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+					<div class="carousel-item" style="background-image: url('static/fileupload/2020120716152269cf430b-a9f1-4560-99ad-ffb2a20e132a.png')">
 						<div class="carousel-caption d-none d-md-block">
-							<h3>Second Slide</h3>
-							<p>This is a description for the second slide.</p>
+							<h3>공지사항</h3>
+							<p>마진 공지사항</p>
 						</div>
 					</div>
 						<!-- Slide Three - Set the background image for this slide in the line below -->
